--- a/src/Performers/Interpreters.RobotPerformer/Interpreters.RobotPerformer.fsproj
+++ b/src/Performers/Interpreters.RobotPerformer/Interpreters.RobotPerformer.fsproj
@@ -50,17 +50,38 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <Choose>
-    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.1'">
-      <ItemGroup>
-        <Reference Include="FSharp.Core">
-          <HintPath>..\..\..\packages\FSharp.Core\lib\net45\FSharp.Core.dll</HintPath>
-          <Private>True</Private>
-          <Paket>True</Paket>
-        </Reference>
-      </ItemGroup>
-    </When>
-  </Choose>
+  <ItemGroup>
+    <Compile Include="AssemblyInfo.fs" />
+    <Content Include="app.config" />
+    <Compile Include="Resources\Resources.fs" />
+    <None Include="paket.references" />
+    <Compile Include="RobotCommands.fs" />
+    <Compile Include="DataLayer\Robot.fs" />
+    <Compile Include="DataLayer\RobotParser.fs" />
+    <Compile Include="DataLayer\CommandGenerator.fs" />
+    <Compile Include="RobotRunner.fs" />
+    <EmbeddedResource Include="LanguageResource.resx" />
+    <EmbeddedResource Include="LanguageResource.ru-RU.resx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.ValueTuple">
+      <HintPath>..\..\..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <ProjectReference Include="..\..\Interpreters\Interpreters.fsproj">
+      <Name>Interpreters</Name>
+      <Project>{522a914e-b787-43b6-9630-b169c8c3441b}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Repo\Repo.fsproj">
+      <Project>{9e7065a4-ba5e-4752-84bf-54d5c00db60c}</Project>
+      <Name>Repo</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.1'">
       <ItemGroup>
@@ -76,7 +97,7 @@
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.1'">
       <ItemGroup>
         <Reference Include="System.Collections.Immutable">
-          <HintPath>..\..\..\packages\System.Collections.Immutable\lib\netstandard1.3\System.Collections.Immutable.dll</HintPath>
+          <HintPath>..\..\..\packages\System.Collections.Immutable\lib\net461\System.Collections.Immutable.dll</HintPath>
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
@@ -109,44 +130,11 @@
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.1'">
       <ItemGroup>
         <Reference Include="System.Runtime.CompilerServices.Unsafe">
-          <HintPath>..\..\..\packages\System.Runtime.CompilerServices.Unsafe\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+          <HintPath>..\..\..\packages\System.Runtime.CompilerServices.Unsafe\lib\net45\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
       </ItemGroup>
     </When>
   </Choose>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Content Include="app.config" />
-    <Compile Include="Resources\Resources.fs" />
-    <None Include="paket.references" />
-    <Compile Include="RobotCommands.fs" />
-    <Compile Include="DataLayer\Robot.fs" />
-    <Compile Include="DataLayer\RobotParser.fs" />
-    <Compile Include="DataLayer\CommandGenerator.fs" />
-    <Compile Include="RobotRunner.fs" />
-    <EmbeddedResource Include="LanguageResource.resx" />
-    <EmbeddedResource Include="LanguageResource.ru-RU.resx" />
-    
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.ValueTuple">
-      <HintPath>..\..\..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <ProjectReference Include="..\..\Interpreters\Interpreters.fsproj">
-      <Name>Interpreters</Name>
-      <Project>{522a914e-b787-43b6-9630-b169c8c3441b}</Project>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Repo\Repo.fsproj">
-      <Project>{9e7065a4-ba5e-4752-84bf-54d5c00db60c}</Project>
-      <Name>Repo</Name>
-    </ProjectReference>
-  </ItemGroup>
 </Project>
